@@ -20,6 +20,7 @@ import org.eclipse.sirius.components.view.diagram.NodeTool;
 import org.eclipse.syson.diagram.interconnection.view.ILeveledNodeDescriptionNameGenerator;
 import org.eclipse.syson.diagram.interconnection.view.tools.PartUsageBindingConnectorAsUsageNodeToolProvider;
 import org.eclipse.syson.diagram.interconnection.view.tools.PartUsageFlowConnectionNodeToolProvider;
+import org.eclipse.syson.diagram.interconnection.view.tools.PartUsageInterfaceNodeToolProvider;
 import org.eclipse.syson.sysml.Element;
 import org.eclipse.syson.util.IDescriptionNameGenerator;
 
@@ -37,7 +38,8 @@ public class FirstLevelChildUsageCreationNodeToolsProvider implements ILeveledCr
             var firstLevelPartUsageNodeDescriptionName = leveledNodeDescriptionNameGenerator.getFirstLevelNodeName(element.eClass());
             var bindingConnectorAsUsageTool = new PartUsageBindingConnectorAsUsageNodeToolProvider(descriptionNameGenerator, firstLevelPartUsageNodeDescriptionName).create(cache);
             var flowConnectionTool = new PartUsageFlowConnectionNodeToolProvider(descriptionNameGenerator, firstLevelPartUsageNodeDescriptionName).create(cache);
-            result = List.of(bindingConnectorAsUsageTool, flowConnectionTool);
+            var interfaceTool = new PartUsageInterfaceNodeToolProvider(descriptionNameGenerator, firstLevelPartUsageNodeDescriptionName).create(cache);
+            result = List.of(bindingConnectorAsUsageTool, flowConnectionTool, interfaceTool);
         }
         return result;
     }
