@@ -198,6 +198,7 @@ public class InterconnectionViewCreateService extends ViewCreateService {
         }
         return self;
     }
+
     public Element createPartUsageAndFlowConnection(PartUsage self) {
         var parent = self.getOwner();
         if (parent != null) {
@@ -213,8 +214,29 @@ public class InterconnectionViewCreateService extends ViewCreateService {
             var newPartUsagePort = SysmlFactory.eINSTANCE.createPortUsage();
             this.elementInitializer(newPartUsagePort);
             this.addChildInParent(newPartUsage, newPartUsagePort);
-            // create binding connector as usage edge between both new ports
+            // create flow connection edge between both new ports
             this.createFlowConnectionUsage(newSelfPort, newPartUsagePort);
+            return newPartUsage;
+        }
+        return self;
+    }
+    public Element createPartUsageAndInterface(PartUsage self) {
+        var parent = self.getOwner();
+        if (parent != null) {
+            // create a new port on given part usage
+            var newSelfPort = SysmlFactory.eINSTANCE.createPortUsage();
+            this.elementInitializer(newSelfPort);
+            this.addChildInParent(self, newSelfPort);
+            // create a new part usage as a self sibling
+            var newPartUsage = SysmlFactory.eINSTANCE.createPartUsage();
+            this.elementInitializer(newPartUsage);
+            this.addChildInParent(parent, newPartUsage);
+            // create a new port on the new part usage
+            var newPartUsagePort = SysmlFactory.eINSTANCE.createPortUsage();
+            this.elementInitializer(newPartUsagePort);
+            this.addChildInParent(newPartUsage, newPartUsagePort);
+            // create interface edge between both new ports
+            this.createInterfaceUsage(newSelfPort, newPartUsagePort);
             return newPartUsage;
         }
         return self;
